--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,18 @@
-body {margin:0;}
+body {
+  margin:0;
+  font-family: 'Maven Pro', sans-serif;
+}
 
+
+
+/* Navigationen layout */
 .navbar {
   overflow: hidden;
   background-color: #333;
   position: fixed;
   top: 0;
   width: 100%;
+  text-align: center;
 }
 
 .navbar a {
@@ -26,5 +33,69 @@ body {margin:0;}
 .main {
   padding: 16px;
   margin-top: 30px;
-  height: 1500px; /* Used in this example to enable scrolling */
+  height: 1500px;
+}
+
+
+/* Login layout */
+.login_container {
+  background-color: rgb(255, 153, 19);
+  width: 400px;
+  height: 250px;
+  padding: 20px;
+  margin:auto;
+  margin-top: 50px;
+border-radius: 5px;
+}
+
+.login_container  input[type=text], input[type=password] { 
+  width: 100%; 
+  margin: 8px 0;
+  padding: 10px; 
+  display: inline-block; 
+  border: 2px solid white; 
+  box-sizing: border-box; 
+  border-radius: 5px;
+}
+
+.login_container button {
+  background-color: rgb(0, 0, 184); 
+       width: 49%;
+        color: white; 
+        padding: 15px; 
+        margin: 10px 0px; 
+        border: none; 
+        cursor: pointer; 
+        border-radius: 5px;
+}
+
+/* Produktsiden, layout biler */
+.card {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  max-width: 300px;
+  margin: auto;
+  margin-top: 50px;
+  text-align: center;
+  font-family: arial;
+}
+
+.price {
+  color: grey;
+  font-size: 22px;
+}
+
+.card button {
+  border: none;
+  outline: 0;
+  padding: 12px;
+  color: white;
+  background-color: #000;
+  text-align: center;
+  cursor: pointer;
+  width: 100%;
+  font-size: 18px;
+}
+
+.card button:hover {
+  opacity: 0.7;
 }
